# physics

./: .gitignore  fix.bat  fix.sh  imgui.ini
Ball/: CMakeLists.txt  README.md
Ball/resources/: ground_frag.glsl  ground_vert.glsl  hud_frag.glsl  light_frag.glsl  light_vert.glsl  phong_frag.glsl  phong_vert.glsl  top_frag.glsl
Ball/src/: Camera.cpp  Camera.h  Light.h  Material.cpp  Material.h  Object.h  Shape.cpp  Shape.h  main.cpp
PhysicsEngine/: CMakeLists.txt  README.md
PhysicsEngine/resources/: phong_frag.glsl
PhysicsEngine/src/: Camera.cpp  Camera.h  Collider.cpp  Collider.h  Entity.h  GeometryUtil.h  Material.cpp  Material.h  MatrixStack.cpp  MatrixStack.h  Mesh.cpp  Mesh.h  Physics.h  Program.cpp  Program.h  Simplex.h  Simulation.cpp  Simulation.h  State.h  Tag.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  dState.h  main.cpp
ball_ina_box/: README.md
ball_ina_box/src/: Light.h  Material.h  Options.h  Program.cpp  Program.h  Simulation.h  main.cpp
boids/: CMakeLists.txt  README.md
boids/resources/: boid_comp.glsl  boid_frag.glsl  boid_vert.glsl  density_comp.glsl  fishy.mtl  phong_frag.glsl  phong_vert.glsl
boids/src/: Boids.cpp  Boids.h  Camera.cpp  Material.h  Object.h  Program.h  Shape.cpp  Shape.h  Simulation.cpp  Simulation.h  main.cpp
ecs_ball/: CMakeLists.txt
ecs_ball/resources/: phong_frag.glsl
ecs_ball/src/: Gui.cpp  Gui.h  Object.h  Options.cpp  Options.h  Shape.cpp  Shape.h  Simulation.cpp  Simulation.h  main.cpp
particles/: CMakeLists.txt  README.md
particles/include/atomic_queue/: atomic_queue.h  atomic_queue_mutex.h  barrier.h  defs.h  spinlock.h
particles/resources/: particle_comp.glsl  particle_frag.glsl  particle_vert.glsl  phong_frag.glsl  phong_vert.glsl
particles/src/: Camera.cpp  Compute.h  Object.h  Particles.cpp  Particles.h  Program.cpp  Program.h  Shape.cpp  Shape.h  Simulation.cpp  Simulation.h  main.cpp
rusty_particles/: Cargo.toml
rusty_particles/src/: main.rs
rusty_particles/src/support/: camera.rs  mod.rs
springy/: CMakeLists.txt  README.md
springy/resources/: cloth_frag.glsl  cloth_vert.glsl  particle_comp.glsl  phong_frag.glsl  phong_vert.glsl  softbody_cleanup.glsl  softbody_faces.glsl  softbody_integrate.glsl  softbody_particles.glsl  softbody_struts.glsl
springy/src/: Camera.cpp  Cloth.cpp  Cloth.h  Collisions.h  Entity.cpp  Entity.h  MeshUtil.h  Object.h  Program.cpp  RigidBody.h  Shape.cpp  Shape.h  Simulation.cpp  Simulation.h  SoftBody.cpp  SoftBody.h  StaticBody.cpp  StaticBody.h  Struts.cpp  Struts.h  abby.h  main.cpp
